Fix preudo wrap link in LarinVariants

--- a/src/components/Link/Link.scss
+++ b/src/components/Link/Link.scss
@@ -13,13 +13,6 @@
   @include transition;
 }
 
-@mixin Link_pseudo-Style {
-  border-color: rgba(9, 9, 73, 0.25);
-  border-bottom-width: 0.1rem;
-  border-bottom-style: dashed;
-  cursor: pointer;
-}
-
 .Link {
   @include Link-Style;
 
