--- a/src/components/Link/_wrap/Link_wrap.scss
+++ b/src/components/Link/_wrap/Link_wrap.scss
@@ -6,7 +6,7 @@
   text-align: left;
 
   background: transparent;
-  border: none;
+  border: none !important;
 
   &:hover {
     .Link-U {
